--- a/src/bad-each-way-finder/bad-each-way-finder/Properties/launchSettings.json
+++ b/src/bad-each-way-finder/bad-each-way-finder/Properties/launchSettings.json
@@ -3,16 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50185",
-      "sslPort": 44390
+      "applicationUrl": "http://localhost:6942",
+      "sslPort": 44364
     }
   },
   "profiles": {
+    "http": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5236",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7259;http://localhost:5052",
+      "applicationUrl": "https://localhost:7271;http://localhost:5236",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
