--- a/src/bad-each-way-finder/bad-each-way-finder/appsettings.json
+++ b/src/bad-each-way-finder/bad-each-way-finder/appsettings.json
@@ -1,11 +1,4 @@
 {
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-    "CallbackPath": "/signin-oidc"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -14,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BadEachWayFinder": "Data Source=bad-each-way-finder.db"
+    "BadEachWayFinder": "Data Source=DESKTOP-AH6COT5\\SQLEXPRESS;Database=BadEachWayFinder;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
