proposition page creation
updates to race page

--- a/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
+++ b/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\bad-each-way-finder-domain\bad-each-way-finder-domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Partials\" />
+  </ItemGroup>
+
 </Project>
