Propositions and races updates
History section started

--- a/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
+++ b/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
@@ -16,14 +16,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+    <PackageReference Include="NonFactors.Grid.Mvc6" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\bad-each-way-finder-domain\bad-each-way-finder-domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Partials\" />
   </ItemGroup>
 
 </Project>
