Landing page updated
Updates to look of Login & Register

--- a/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
+++ b/src/bad-each-way-finder/bad-each-way-finder/bad-each-way-finder.csproj
@@ -35,4 +35,14 @@
     <ProjectReference Include="..\bad-each-way-finder-domain\bad-each-way-finder-domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\images\black-and-white-ground-shot.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
